--- a/style.html
+++ b/style.html
@@ -43,57 +43,6 @@
             border: 1px dashed color-mix(in srgb, var(--danger-color) 35%, transparent);
             margin-left: 8px;
         }
-        .mov-conferencia-overlay {
-            position: absolute;
-            inset: 0;
-            background: rgba(15, 23, 42, 0.55);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.2s ease, visibility 0.2s ease;
-            z-index: 15;
-        }
-        .mov-conferencia-overlay.aberto {
-            opacity: 1;
-            visibility: visible;
-        }
-        .mov-conferencia-card {
-            width: 100%;
-            max-width: 540px;
-            background: var(--surface-color);
-            border-radius: 16px;
-            box-shadow: 0 18px 36px rgba(15, 23, 42, 0.18);
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 14px;
-        }
-        .mov-conferencia-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 12px;
-        }
-        .mov-conferencia-item {
-            font-weight: 600;
-            margin: 4px 0 10px;
-        }
-        .mov-conferencia-body {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-        .mov-conferencia-actions {
-            display: flex;
-            justify-content: flex-end;
-            gap: 10px;
-        }
-        .mov-conferencia-overlay.erro textarea {
-            border-color: var(--danger-color);
-        }
         .sr-only {
             position: absolute;
             width: 1px;
@@ -2835,6 +2784,12 @@
             display: grid;
             grid-template-columns: minmax(0, 2fr) minmax(320px, 1fr);
             gap: 16px;
+            align-items: start;
+        }
+        .mov-form-grid {
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
         }
         .mov-card {
             background: var(--surface-color);
@@ -2880,17 +2835,27 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
             gap: 8px;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
         .mov-tab {
-            border: 1px solid color-mix(in srgb, var(--primary-color) 30%, transparent);
-            background: color-mix(in srgb, var(--primary-color) 10%, white 90%);
-            color: color-mix(in srgb, var(--primary-color) 85%, black 15%);
+            border: 1px solid transparent;
+            background: color-mix(in srgb, var(--primary-color) 8%, white 92%);
+            color: color-mix(in srgb, var(--text-color) 90%, black 10%);
             padding: 10px 12px;
             border-radius: 12px;
             font-weight: 700;
             transition: all 0.2s ease;
             text-align: center;
+        }
+        .mov-tab-entrada {
+            border-color: color-mix(in srgb, #1ba97a 40%, transparent);
+            background: color-mix(in srgb, #1ba97a 12%, white 88%);
+            color: color-mix(in srgb, #0f7252 70%, var(--text-color));
+        }
+        .mov-tab-saida {
+            border-color: color-mix(in srgb, #d64545 40%, transparent);
+            background: color-mix(in srgb, #d64545 12%, white 88%);
+            color: color-mix(in srgb, #9a2222 70%, var(--text-color));
         }
         .mov-tab:hover,
         .mov-tab:focus-visible {
@@ -2898,9 +2863,21 @@
             outline: none;
         }
         .mov-tab.active {
-            background: color-mix(in srgb, var(--primary-color) 18%, white 82%);
+            background: color-mix(in srgb, var(--primary-color) 22%, white 78%);
             color: var(--primary-color);
-            border-color: color-mix(in srgb, var(--primary-color) 55%, transparent);
+            border-color: color-mix(in srgb, var(--primary-color) 60%, transparent);
+        }
+        .mov-tab-entrada.active {
+            background: linear-gradient(145deg, color-mix(in srgb, #1ba97a 30%, white 70%), color-mix(in srgb, #1ba97a 10%, white 90%));
+            color: #0f7252;
+            border-color: color-mix(in srgb, #1ba97a 70%, transparent);
+            box-shadow: 0 10px 24px color-mix(in srgb, #1ba97a 25%, transparent);
+        }
+        .mov-tab-saida.active {
+            background: linear-gradient(145deg, color-mix(in srgb, #d64545 30%, white 70%), color-mix(in srgb, #d64545 10%, white 90%));
+            color: #8b1c1c;
+            border-color: color-mix(in srgb, #d64545 70%, transparent);
+            box-shadow: 0 10px 24px color-mix(in srgb, #d64545 25%, transparent);
         }
         .mov-tab-panel {
             display: none;
@@ -2910,6 +2887,18 @@
         }
         .mov-tab-panel.active {
             display: flex;
+        }
+        .mov-tab-placeholder {
+            padding: 8px 10px;
+            border: 1px dashed color-mix(in srgb, var(--border-color) 70%, transparent);
+            border-radius: 12px;
+            background: color-mix(in srgb, var(--surface-color) 94%, white 6%);
+        }
+        .mov-tab-placeholder.hidden {
+            display: none;
+        }
+        .mov-flow-content.hidden {
+            display: none;
         }
         .form-group-header {
             display: flex;
@@ -3010,6 +2999,44 @@
             flex-direction: column;
             gap: 8px;
             margin-top: 8px;
+        }
+        .mov-signature-wrapper {
+            grid-column: 1 / -1;
+            display: grid;
+            grid-template-columns: minmax(0, 1fr);
+            gap: 14px;
+            justify-items: center;
+        }
+        .mov-signature-card {
+            width: min(920px, 100%);
+            border: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
+            border-radius: 14px;
+            padding: 14px;
+            background: color-mix(in srgb, var(--surface-color) 96%, white 4%);
+            box-shadow: 0 10px 26px color-mix(in srgb, var(--shadow-color) 50%, transparent);
+        }
+        .mov-signature-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            gap: 10px;
+            margin-bottom: 8px;
+        }
+        .mov-signature-header .helper-text {
+            margin: 0;
+        }
+        .signature-actions {
+            justify-content: center;
+        }
+        .mov-theme-entrada .modal-content,
+        .modal-content.mov-theme-entrada {
+            background: linear-gradient(180deg, color-mix(in srgb, #1ba97a 8%, transparent), var(--surface-color));
+            border-color: color-mix(in srgb, #1ba97a 45%, var(--border-color));
+        }
+        .mov-theme-saida .modal-content,
+        .modal-content.mov-theme-saida {
+            background: linear-gradient(180deg, color-mix(in srgb, #d64545 8%, transparent), var(--surface-color));
+            border-color: color-mix(in srgb, #d64545 45%, var(--border-color));
         }
         .movimentacao-item-row {
             display: grid;
